<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".ui.main.MainFragment">

    <ImageView
        android:id="@+id/headset"
        android:layout_width="262dp"
        android:layout_height="198dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/headphone"
        android:scaleType="fitCenter"
        android:src="@mipmap/lifesoul"
        app:layout_constraintBottom_toTopOf="@+id/location_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/battery_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headset">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/headphone_status"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/headphone_disconnect"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/device_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/battery_info">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/headphone_name"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/unknown"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_info">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/headphone_address"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/unknown"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/connect"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/shape_textview"
        android:gravity="center"
        android:text="連線裝置"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/battery_info" />

</androidx.constraintlayout.widget.ConstraintLayout>
