<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <ImageView
        android:id="@+id/location"
        android:layout_width="262dp"
        android:layout_height="198dp"
        android:contentDescription="@string/location_auth"
        android:scaleType="fitCenter"
        android:src="@mipmap/location"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/location_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="154dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/location_auth"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="75dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/auth_message"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/auth_message1"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/commit"
        android:layout_width="154dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/auth_commit"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2" />


</androidx.constraintlayout.widget.ConstraintLayout>
