<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <ImageView
        android:id="@+id/airpods"
        android:layout_width="262dp"
        android:layout_height="198dp"
        android:contentDescription="@string/location_auth"
        android:scaleType="fitCenter"
        android:src="@mipmap/airpods"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/location_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headset"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="藍芽耳機"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/airpods" />

    <LinearLayout
        android:id="@+id/headphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headset">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/headphone_status"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="未連線"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/power_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headphone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/headphone_power_l"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="0%"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/power_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_l">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/headphone_power_r"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="0%"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/connect"
        android:layout_width="154dp"
        android:layout_height="32dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="連線裝置"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_r" />

</androidx.constraintlayout.widget.ConstraintLayout>
